# tauri-plugin-module-federation

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release-pull-request.yml  release.yml
docs/: RELEASING.md
example/: README.md  package.json
example/guest/: package.json  rsbuild.config.ts  rspack.config.js
example/guest-2/: package.json  rsbuild.config.ts  rspack.config.js
example/guest-2/src/: Button.js
example/guest/src/: Button.js
example/host/: package.json  rsbuild.config.ts  rspack.config.js
example/host/src/: App.js
example/host/src-tauri/: Cargo.toml  tauri.conf.json
module-federation-plugin/: index.js  package.json
tauri-plugin/: Cargo.toml
tauri-plugin/src/: lib.rs
