[package]
name = "tauri-plugin-module-federation"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-module-federation"

[dependencies]
tauri = { version = "2.9.4" }
serde = "1.0.228"
thiserror = "2.0.17"
reqwest = "0.12.24"
url = "2.5.7"
form_urlencoded = "1.2.2"
base64 = "0.22.1"
sha = "1.0.3"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
